apps/base/actual/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
spec:
  selector:
    app: actual
  ports:
    - name: http-actual
      protocol: TCP
      port: 5006
      targetPort: http-actual
