apps/base/actual/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: actual
spec:
  ingressClassName: traefik
  rules:
    - host: budget.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  name: http-actual
