apps/base/actual/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-route
  namespace: actual
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - budget.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: actual
          port: 5006
